syntax = "proto3";

option go_package = "github.com/ichigozero/gtdkit/backend/usersvc/pb";

package pb;

service User {
  rpc UserID (UserIDRequest) returns (UserIDReply) {}
  rpc IsExists (IsExistsRequest) returns (IsExistsReply) {}
}

message UserIDRequest {
  string name = 1;
  string password = 2;
}

message UserIDReply {
  uint64 id = 1;
  string err = 2;
}

message IsExistsRequest {
  uint64 id = 1;
}

message IsExistsReply {
  bool v = 1;
  string err = 2;
}
